--- a/App/package.json
+++ b/App/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "web3": "^4.8.0"
+    "web3": "^4.8.0",
+    "web3-plugin-gasfees": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
